<resources>
    <string name="app_name">ET-Track</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="welcome_back">Welcome Back</string>
</resources>